# tdip3d

./: CMakeLists.txt  README.txt  Usermanual.txt
model-modify/complex/: model.emd  model.mdl  model.prm
model-modify/half-space/model-g/: model.emd  model.prm
model-modify/half-space/model-h/: model.mdl  model.prm
model-modify/half-space/model-hp/: model.prm
model-modify/topography-abnormal/: model.emd  model.mdl  model.prm
model-modify/two-layers/: model.emd  model.mdl  model.prm
model/abnormal/: model.emd  model.mdl  model.prm
model/acc-hp/: model.prm
model/model-g/: model.prm
model/model-h/: model.prm
model/model-hp/: model.prm
model/test01/: model.emd  model.mdl  model.prm
model/test01/output/: model-00-00.vtu  model-00-01.vtu  model.rsp
model/test02/: model.emd  model.mdl  model.prm
model/test02/output/: model-00-00.vtu  model-00-01.vtu  model-00-02.vtu  model-00-03.vtu  model-00-04.vtu  model-01-00.vtu  model-01-01.vtu  model-01-02.vtu  model-01-03.vtu  model-01-04.vtu  model-02-00.vtu  model-02-01.vtu  model-02-02.vtu  model-02-03.vtu  model-02-04.vtu  model-03-00.vtu  model-03-01.vtu  model-03-02.vtu  model-03-03.vtu  model-04-00.vtu  model-04-01.vtu  model-04-02.vtu  model-04-03.vtu  model-04-04.vtu  model-05-00.vtu  model-05-01.vtu  model-05-02.vtu  model-05-03.vtu  (+20 more)
model/topography/: model.emd  model.prm
src/: CMakeLists.txt  Makefile  cmake_install.cmake  em_ctx.cc  em_ctx.h  em_defs.h  em_fwd.cc  em_fwd.h  em_io.cc  em_io.h  em_main.cc  em_mesh.cc  em_mesh.h  em_topo.cc  em_topo.h  em_utils.cc  em_utils.h  nanoflann.h
